syntax = "proto3";

package main;
option go_package = ".;main";


message ProxyRequest {
	oneof req {
      ProxyConnect connect = 1;
	  bytes chunk = 2;
	}
}

message ProxyConnect {
	string target = 1;
}


message ProxyConnected {
}

message ProxyResponse {
	oneof res {
	  ProxyConnected connected = 1;
	  bytes chunk = 2;
	  string eof = 3;
    }
}

service Proxy {
  rpc Proxy (stream ProxyRequest) returns (stream ProxyResponse) {}
}
